# j-webgl

./: .gitignore  Cargo.toml
examples/vuejs/: index.html  package.json  vite.config.js
examples/vuejs/src/: App.vue
examples/vuejs/src/components/: ErrorElement.vue
examples/wasm/: Cargo.toml
examples/wasm/src/: lib.rs
j-webgl/: Cargo.toml
j-webgl-macro-make-render/: Cargo.toml
j-webgl-macro-make-render/src/: make_renderer.rs
j-webgl-macro-make-renderer/: Cargo.toml
j-webgl-macro-make-renderer/src/: lib.rs  make_renderer.rs
j-webgl/src/: error.rs  lib.rs  renderer.rs  traits.rs  utils.rs
j-webgl/src/algebra/: matrix4.rs  mod.rs  point3.rs  vector3.rs
j-webgl/src/programs/: mod.rs  triangles_shaded.rs
j-webgl/src/shaders/: fragment.rs  mod.rs  vertex.rs
j-webgl/src/structs/: mod.rs
j-webgl/src/structs/camera/: basic.rs  mod.rs
j-webgl/src/structs/renderable/: cube.rs  cube_with_normals.rs  initializer.rs  mod.rs
