[package]
name = "j-webgl-macro-make-renderer"
version = "0.0.2"
edition = "2024"
description = "[internal] Wrapper around WebGL v2 to faciliate re-use."
repository = "https://github.com/juliendecharentenay/j-webgl"
license = "GPLv3"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = [ "full", "extra-traits" ] }
proc-macro2 = { version = "1" }
quote = { version = "1" }
