[package]
name = "j-webgl"
version = "0.0.2"
edition = "2024"
description = "Wrapper around WebGL v2 to faciliate re-use"
repository = "https://github.com/juliendecharentenay/j-webgl"
license = "GPL-3.0-only"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = { version = "2.0.17" }
wasm-bindgen = { version = "0.2.106" }
js-sys = { version = "0.3" }
web-sys = { version = "0.3.83", features = [ 
    "HtmlCanvasElement", 
    "WebGl2RenderingContext", "WebGlBuffer",
    "WebGlUniformLocation", "WebGlProgram", "WebGlShader",
    "WebGlVertexArrayObject",
    "Window", "DomRect", "Element", "console",
] }
j-webgl-macro-make-renderer = { path = "../j-webgl-macro-make-renderer" }
